# groklang

./: ARCHITECTURAL-DECISIONS.md  CONTRIBUTORS.md  IMPLEMENTATION-PACKAGE.md  LICENSE  Master-Validation-Checklist.md  README.md  Specification-Document.md  build_binary.sh  fuzz_test.py  grok.toml  hello.grok  pyproject.toml  requirements-dev.txt  test_final.grok
.agent/tasks/: migration_roadmap.md
.github/workflows/: ci.yml
docs/: AI-Features-Demo.md  Implementation-Roadmap.md  Performance-Optimization-Strategy.md  README.md  User-Guide.md
docs/Implementation/: Phase-1-Lexer-Parser.md  Phase-2-Type-Checker-AST.md  Phase-3-5-Summary.md
docs/Specifications/: 01-Architecture-Overview.md  02-Type-System-Specification.md  03-Syntax-Grammar.md  04-Runtime-Memory-Model.md  05-AI-Integration-Specification.md  06-Module-System.md  07-Standard-Library-API.md
docs/Validation/: Master-Validation-Checklist.md
docs/rust-migration/: 01-overview.md  02-architecture.md  03-lexer-parser-migration.md  04-typechecker-ir-migration.md  05-runtime-performance.md  06-advanced-features.md  07-tooling-ecosystem.md  08-timeline-validation.md  README.md
grok/: Cargo.toml  README.md  test_ffi.py
grok/benchmarks/: fib.go  fib.grok  fib.py  fib.rs  fib_go  fib_rs
grok/docs/: ai_features.md  performance_benchmarks.md
grok/src/: ai.rs  ast.rs  borrow_checker.rs  compiler.rs  concurrency.rs  ffi.rs  gc.rs  ir.rs  jit.rs  lexer.rs  lib.rs  lsp.rs  macro_expander.rs  main.rs  optimizations.rs  optimizer.rs  package_manager.rs  parser.rs  python_ffi.rs  type_checker.rs  vm.rs
grok/tests/: ai.rs  ai_demo.rs  benchmark_fib.rs  borrow_checker.rs  compiler.rs  gc.rs  integration.rs  jit.rs  jit_benchmarks.rs  lexer.rs  macro_expander.rs  optimization_benchmarks.rs  optimized_benchmarks.rs  parser.rs  parser_actor.rs  type_checker.rs  type_checker_actor.rs  vm.rs  vm_actor.rs  vm_concurrency_advanced.rs
src-legacy/: README.md
src-legacy/groklang/: advanced_gc.py  ast_nodes.py  benchmark.py  borrow_checker.py  build_binary.sh  codegen.py  config.py  deadlock_detector.py  ir.py  language_server.py  lexer.py  macro_expander.py  memory_manager.py  optimizer.py  package_manager.py  parser.py  security.py  type_checker.py  types.py  vm.py  zero_cost_optimizer.py
src/groklang/: __init__.py  __main__.py  actor_runtime.py  ast_nodes.py  borrow_checker.py  codegen.py  compiler.py  config.py  constraint_collector.py  debugger.py  (+17 more)
tests/: test_codegen.py  test_concurrency.py  test_deadlock_detector.py  test_debugger.py  test_error_diagnostics.py  test_ffi_ai.py  test_ffi_robustness.py  test_language_server.py  test_lexer.py  test_literals.py  test_llvm_compilation.py  test_lsp_completeness.py  test_macro_expansion.py  test_macros.py  test_modules.py  test_optimization_equivalence.py  test_optimizer.py  test_package_manager.py  test_parser.py  test_parser_comprehensive.py  test_performance.py  test_runtime.py  test_runtime_ai.py  test_stdlib.py  test_type_checker.py
