[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groklang"
version = "0.1.0"
description = "GrokLang: AI-enhanced programming language"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "ply>=3.11",
]

[project.scripts]
groklang = "groklang:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
groklang = ["*.md"]