[package]
name = "grok"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14"
nom = "7.1"
nom_locate = "4.0"
typed-arena = "2.0"
# inkwell = { version = "0.5.0", features = ["llvm15-0"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
sled = "0.34"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tower-lsp = "0.20"
cranelift-codegen = "0.111.0"
cranelift-frontend = "0.111.0"
cranelift-module = "0.111.0"
cranelift-jit = "0.111.0"
cranelift-native = "0.111.0"
target-lexicon = "0.12"
# pyo3 = "0.21"  # Requires Python dev headers
